20080723
	rename Inferno's yacc to iyacc to avoid clash with system's own (now that Linux and others distribute it)
20080707
	update emu/port/win-x11a.c (fix someone's earlier patch to stop using undefined value)
	emu/port/main.c mark obsolete options and remove from usage
20080705
	update utils/sed, eliminating anonymous unions (just by commenting them out, to keep source in step with 9)
		and several other changes for portability
20080703
	remove anonymous unions (and unused structs) from unpacking structures in emu/Nt/vlrt.c, not that it's used
20080617
	win-x11a.c add sqweek's change to pass on KeyRelease values (but perhaps 1-byte values are no longer enough?)
20080614
	change os/port/devcons.c to use error not panic in sysfatal
20080612
	change several libmp/port functions to use sysfatal not abort
	change emu/port/main.c to have sysfatal call error not exit
20080611
	Keyring->dhparams to use DSAprimes in special case
	IPint.random now ignores minint (will go next revision)
	BigInt -> mpint*
	checkIPint in libinterp/ipint.c
	default keys in auth/createsignerkey are 1024 not 512 bits
	update os/boot/pc
20080610
	push sh-mload(1) and changes to sh-expr(1)
20080609
	_tas type changed from ulong to int
20080530
	issue 91: _declspec changed to __declspec in Nt files
	issue 92: argv0 declaration changed to extern from static in emu/Nt/win.c
20080529
	limbo/stubs.c: allow pick adt types
20080528
	emu/port/win-x11a.c screen depth checks from drawterm via tim@nop.cx
20080524
	add missing NetBSD files
20080522
	dis/lib/msgio.dis appl/lib/msgio.b - fix incorrect check for 16rFF
	add OpenBSD changes from tim@nop.cx (more changes to follow shortly that cause changes elsewhere)
20080416
	fix emu/Nt/os.c use of wrong name for null value
	move win/win-x11a references to emu/*/emu config files from emu/*/mkfile
20080415
	googlecode update with correct dis files for acme
	tidier code for hoststderr